--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
         <h3>Mod: NoCapes</h3>
         <p>Mod client-side que elimina las capas de minecraft para eventos.</p>
       </div>
-      <div class="project">
-        <h3>Plugin: Perfectamente equilibrado</h3>
-        <p>minijuego creado para el evento GEO WARE ODDYSEY de ALDO GEO.
 
-        </p>
-      </div>
+      <div class="project">
+  <h3>Plugin: Perfectamente equilibrado</h3>
+  <p>Minijuego creado para el evento GEO WARE ODDYSEY de ALDO GEO.</p>
+
+  <h4>Vista previa en video</h4>
+  <div class="video-container">
+    <video width="640" controls>
+      <source src="media/perfectamente_equilibrado.mp4" type="video/mp4" />
+      Tu navegador no soporta la reproducción de video.
+    </video>
+  </div>
+</div>
+      
       <div class="project">
         <h3>Plugin: hunting for love</h3>
         <p>juego del evento Stealing Hearts de LilithLuvsYa.
