--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     </section>
     <section id="contact">
       <h2>Contacto</h2>
-      <form id="contact-form">
-        <input type="text" placeholder="Tu nombre" required />
-        <input type="email" placeholder="Tu correo" required />
-        <textarea placeholder="Tu mensaje" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
+      <form id="contact-form" action="/data/guardar_mensaje.php" method="POST">
+  <input type="text" name="nombre" placeholder="Tu nombre" required />
+  <input type="email" name="correo" placeholder="Tu correo" required />
+  <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
+  <button type="submit">Enviar</button>
+</form>
     </section>
   </main>
 
