--- a/index.html
+++ b/index.html
@@ -20,45 +20,49 @@
 
     <section id="projects">
       <h2>Proyectos destacados</h2>
+      
       <div class="project">
         <h3>Mod: NoCapes</h3>
         <p>Mod client-side que elimina las capas de minecraft para eventos.</p>
       </div>
 
       <div class="project">
-  <h3>Plugin: Perfectamente equilibrado</h3>
-  <p>Minijuego creado para el evento GEO WARE ODDYSEY de ALDO GEO.</p>
+        <h3>Plugin: Perfectamente equilibrado</h3>
+        <p>Minijuego creado para el evento GEO WARE ODDYSEY de ALDO GEO.</p>
 
-  <h4>Vista previa en video</h4>
-  <div class="video-container">
-    <video width="640" controls>
-      <source src="media/perfectamente_equilibrado.mp4" type="video/mp4" />
-      Tu navegador no soporta la reproducción de video.
-    </video>
-  </div>
-</div>
-      
+        <h4>Vista previa en video</h4>
+        <div class="video-container">
+          <video width="640" controls>
+            <source src="media/perfectamente_equilibrado.mp4" type="video/mp4" />
+            Tu navegador no soporta la reproducción de video.
+          </video>
+        </div>
+      </div>
+
       <div class="project">
         <h3>Plugin: hunting for love</h3>
-        <p>juego del evento Stealing Hearts de LilithLuvsYa.
-            <h2>Vista previa en video</h2>
-   <div class="video-container">
-   <img
-    src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
-    alt="Miniatura del video"
-    class="thumbnail"
-    onclick="playVideo()"
-    />
-    </div>
+        <p>Juego del evento Stealing Hearts de LilithLuvsYa.</p>
+
+        <h2>Vista previa en video</h2>
+        <div class="video-container">
+          <img
+            src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
+            alt="Miniatura del video"
+            class="thumbnail"
+            onclick="playVideo()"
+          />
+        </div>
+      </div>
     </section>
+
     <section id="contact">
       <h2>Contacto</h2>
       <form id="contact-form" action="/data/guardar_mensaje.php" method="POST">
-  <input type="text" name="nombre" placeholder="Tu nombre" required />
-  <input type="email" name="correo" placeholder="Tu correo" required />
-  <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
-  <button type="submit">Enviar</button>
-</form>
+        <input type="text" name="nombre" placeholder="Tu nombre" required />
+        <input type="email" name="correo" placeholder="Tu correo" required />
+        <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
+        <button type="submit">Enviar</button>
+      </form>
     </section>
   </main>
 
