--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portafolio Minecraft</title>
   <link rel="stylesheet" href="styles/index.css" />
+  <link rel="icon" href="images/icon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
