--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     </section>
 
     <section id="contact">
-      <h2>Contacto</h2>
-      <form id="contact-form" action="/data/guardar_mensaje.php" method="POST">
-        <input type="text" name="nombre" placeholder="Tu nombre" required />
-        <input type="email" name="correo" placeholder="Tu correo" required />
-        <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
+  <h2>Contacto</h2>
+  <form id="contact-form" action="send_email.php" method="POST">
+    <input type="text" name="nombre" placeholder="Tu nombre" required />
+    <input type="email" name="correo" placeholder="Tu correo" required />
+    <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
+    <button type="submit">Enviar</button>
+  </form>
+</section>
   </main>
 
   <footer>
