--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio Minecraft</title>
+  <title>Portafolio de minecraft</title>
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="icon" href="images/icon.ico" type="image/x-icon" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -53,6 +54,25 @@
             onclick="playVideo()"
           />
         </div>
+      </div>
+    </section>
+
+    <section id="social-links">
+      <h2>Sígueme</h2>
+      <div class="social-buttons">
+        
+        <a href="https://github.com/carpinchogaucho" target="_blank">
+          <button class="social-btn github-btn">
+            <i class="fab fa-github"></i> GitHub
+          </button>
+        </a>
+
+       
+        <a href="https://x.com/dev_carpincho" target="_blank">
+          <button class="social-btn twitter-btn">
+            <i class="fab fa-twitter"></i> Twitter
+          </button>
+        </a>
       </div>
     </section>
 
