--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
   <h2>Contacto</h2>
   <form id="contact-form" action="send_email.php" method="POST">
     <input type="text" name="nombre" placeholder="Tu nombre" required />
-    <input type="email" name="correo" placeholder="Tu correo" required />
-    <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
+    <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
     <button type="submit">Enviar</button>
   </form>
 </section>
