--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <section id="contact">
   <h2>Contacto</h2>
-  <form id="contact-form" action="/data/send_email.php" method="POST">
+  <form id="contact-form" action="data/send_email.php" method="POST">
     <input type="text" name="nombre" placeholder="Tu nombre" required />
     <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
     <button type="submit">Enviar</button>
