--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
     <section id="contact">
   <h2>Contacto</h2>
-  <form id="contact-form" action="data/send_email.php" method="POST">
-    <div id="form-response" style="margin-top: 1rem;"></div>
-    
-    <input type="email" name="email" placeholder="Tu correo electrónico" required /><br>
-    <input type="text" name="nombre" placeholder="Tu nombre" required /><br>
-    <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea><br>
+  <form id="contact-form" action="https://formsubmit.co/c.carpincho.gaucho@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://portafolio.github.io/gracias.html">
+
+    <input type="text" name="nombre" placeholder="Tu nombre" required />
+    <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
     
     <button type="submit">Enviar</button>
   </form>
