--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h2>Contacto</h2>
   <form id="contact-form" action="https://formsubmit.co/c.carpincho.gaucho@gmail.com" method="POST">
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://portafolio.github.io/gracias.html">
+    <input type="hidden" name="_next" value="https://GitHub/portafolio.github.io/gracias.html">
 
     <input type="text" name="nombre" placeholder="Tu nombre" required />
     <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
