--- a/index.html
+++ b/index.html
@@ -79,12 +79,18 @@
     <section id="contact">
   <h2>Contacto</h2>
   <form id="contact-form" action="https://formsubmit.co/c.carpincho.gaucho@gmail.com" method="POST">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://GitHub/portafolio.github.io/gracias.html">
+    <div id="form-response" style="margin-top: 1rem;"></div>
 
-    <input type="text" name="nombre" placeholder="Tu nombre" required />
+    <input type="text" name="nombre" placeholder="Tu nombre" required>
+    <input type="email" name="email" placeholder="Tu correo" required>
     <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
+
     
+    <input type="hidden" name="_next" value="https://portafolio.github.io/gracias.html">
+
+    
+    <input type="hidden" name="_captcha" value="false">
+
     <button type="submit">Enviar</button>
   </form>
 </section>
