no tengo idea de lo que estoy haciendo

--- a/index.html
+++ b/index.html
@@ -78,20 +78,10 @@
 
     <section id="contact">
   <h2>Contacto</h2>
-  <form id="contact-form" action="https://formsubmit.co/robertocaracuadrada532@gmail.com" method="POST">
-    <div id="form-response" style="margin-top: 1rem;"></div>
-
-    <input type="text" name="nombre" placeholder="Tu nombre" required>
-    <input type="email" name="email" placeholder="Tu correo" required>
-    <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
-
-    
-    <input type="hidden" name="_next" value="https://carpinchogaucho.github.io/portafolio/gracias.html">
-
-    
-    <input type="hidden" name="_captcha" value="false">
-
-    <button type="submit">Enviar</button>
+  <form id="contact-form" action="https://formsubmit.co/c.carpincho.gaucho@gmail.com" method="POST">
+     <input type="text" name="name" required>
+     <input type="email" name="email" required>
+     <button type="submit">enviar</button>
   </form>
 </section>
   </main>
