--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
 
     
-    <input type="hidden" name="_next" value="https://carpinchogaucho.github.io/portafolio/gracias.html">
+    <input type="hidden" name="_next" value="gracias.html">
 
     
     <input type="hidden" name="_captcha" value="false">
