--- a/index.html
+++ b/index.html
@@ -76,24 +76,16 @@
       </div>
     </section>
 
-    <section id="contact">
-  <h2>Contacto</h2>
-  <form id="contact-form" action="https://formsubmit.co/c.carpincho.gaucho@gmail.com" method="POST">
-    <div id="form-response" style="margin-top: 1rem;"></div>
-
-    <input type="text" name="nombre" placeholder="Tu nombre" required>
-    <input type="email" name="email" placeholder="Tu correo" required>
-    <input type="hidden" name="_subject" value="New submission!">
-    <textarea name="mensaje" placeholder="Contame qué querés para tu comisión" required></textarea>
-
-    
-    <input type="hidden" name="_next" value="gracias.html">
-
-    
-    <input type="hidden" name="_captcha" value="false">
-
-    <button type="submit">Enviar</button>
-  </form>
+    <section id="comentarios">
+  <h2>Comentarios</h2>
+  <p>Dejá tu comentario usando tu cuenta de GitHub:</p>
+  <script src="https://utteranc.es/client.js"
+          repo="carpinchogaucho/portafolio"
+          issue-term="pathname"
+          theme="github-dark"
+          crossorigin="anonymous"
+          async>
+  </script>
 </section>
   </main>
 
