--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
   <h2>Comentarios</h2>
   <p>Dejá tu comentario usando tu cuenta de GitHub:</p>
   <script src="https://utteranc.es/client.js"
-          repo="carpinchogaucho/portafolio"
-          issue-term="pathname"
-          theme="github-dark"
-          crossorigin="anonymous"
-          async>
-  </script>
+        repo="carpinchogaucho/portafolio"
+        issue-term="url"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 </section>
   </main>
 
