--- a/index.html
+++ b/index.html
@@ -76,16 +76,15 @@
       </div>
     </section>
 
-    <section id="comentarios">
+    <section id="comments">
   <h2>Comentarios</h2>
-  <p>Dejá tu comentario usando tu cuenta de GitHub:</p>
   <script src="https://utteranc.es/client.js"
-        repo="carpinchogaucho/portafolio"
-        issue-term="url"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-</script>
+          repo="carpinchogaucho/portafolio"
+          issue-term="title"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
 </section>
   </main>
 
