--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h2>Comentarios</h2>
   <script src="https://utteranc.es/client.js"
           repo="carpinchogaucho/portafolio"
-          issue-term="title"
+          issue-term="contacto"
           theme="github-light"
           crossorigin="anonymous"
           async>
