--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     <section id="comments">
   <h2>Comentarios</h2>
   <script src="https://utteranc.es/client.js"
-          repo="carpinchogaucho/portafolio"
-          issue-term="contacto"
-          theme="github-light"
-          crossorigin="anonymous"
-          async>
-  </script>
+        repo="carpinchogaucho/portafolio.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 </section>
   </main>
 
