--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h2>Comentarios</h2>
   <script src="https://utteranc.es/client.js"
         repo="carpinchogaucho/portafolio.github.io"
-        issue-term="pathname"
+        issue-term="contacto"
         theme="github-dark"
         crossorigin="anonymous"
         async>
