--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <script src="https://utteranc.es/client.js"
         repo="carpinchogaucho/portafolio.github.io"
         issue-term="contacto"
+        label="contacto"
         theme="github-dark"
         crossorigin="anonymous"
         async>
