--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <h2>Vista previa en video</h2>
         <div class="video-container">
           <img
-            src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
-            alt="Miniatura del video"
-            class="thumbnail"
-            onclick="playVideo()"
-          />
+        src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
+        alt="Miniatura del video"
+        class="thumbnail"
+        onclick="playVideo(this)"
+        />
         </div>
       </div>
     </section>
