--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
           alt="Miniatura del video"
           class="thumbnail"
-          onclick="playVideo(this, 'TNfCHBjewe0')"
+          onclick="playVideo()"
          />
         </div>
       </div>
