--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
         <h3>Plugin: hunting for love</h3>
         <p>Juego del evento Stealing Hearts de LilithLuvsYa.</p>
 
-        <h2>Vista previa en video</h2>
-        <div class="video-container">
-        <img
-         src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
-         alt="Miniatura del video"
-         class="thumbnail"
-         onclick="playVideo()"
-          />
+        <h4>Vista previa en video</h4>
+       <div class="video-container" id="yt-video-container">
+       <img
+       src="https://img.youtube.com/vi/TNfCHBjewe0/hqdefault.jpg"
+       alt="Miniatura del video"
+       class="thumbnail"
+        onclick="playVideo()"
+       />
       </div>
+      <audio id="click-sound" src="media/click.ogg" preload="auto"></audio>
       </div>
     </section>
 
