--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             Tu navegador no soporta la reproducción de video.
           </video>
         </div>
+        <audio id="click-sound" src="media/click.ogg" preload="auto"></audio>
       </div>
 
       <div class="project">
